--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --config jestconfig.json",
-    "build": "tsc"
+    "build": "tsc",
+    "prepublishOnly": "yarn test",
+    "version": "git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "license": "MIT",
   "devDependencies": {
@@ -13,5 +16,14 @@
     "jest": "^29.0.0",
     "ts-jest": "^28.0.8",
     "typescript": "^4.7.4"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Maydmor/ts-headless-calendar"
+  },
+  "bugs": {
+    "url": "https://github.com/Maydmor/ts-headless-calendar/issues"
+  },
+  "homepage": "https://github.com/Maydmor/ts-headless-calendar#readme",
+  "files": ["lib/**/*"]
 }
