--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-headless-calendar",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A headless calendar built with typescript",
   "main": "index.js",
   "scripts": {
@@ -25,5 +25,7 @@
     "url": "https://github.com/Maydmor/ts-headless-calendar/issues"
   },
   "homepage": "https://github.com/Maydmor/ts-headless-calendar#readme",
-  "files": ["lib/**/*"]
+  "files": [
+    "lib/**/*"
+  ]
 }
