--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^28.1.8",
     "jest": "^29.0.0",
     "ts-jest": "^28.0.8",
+    "typedoc": "^0.23.14",
     "typescript": "^4.7.4"
   },
   "repository": {
